Fix delete on mobile

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/bulk-domain-transfer-domains/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/bulk-domain-transfer-domains/styles.scss
@@ -23,7 +23,7 @@
 
 			.step-container__header {
 				width: 100%;
-				margin-top: 74px;
+				margin-top: 42px;
 			}
 			header {
 				text-align: center;
